# ttbox_desk_server

./: .cursorrules  .env  Cargo.toml  DOCKER_BUILD.md  Dockerfile.compile  FIX_DOCKER_MIRROR.md  GITHUB_WORKFLOW.md  config.toml  docker-build.bat
.github/workflows/: build.yml  main.yml  rust.yml
migration/: Cargo.toml
migration/src/: lib.rs  m20220101_000001_create_table.rs  m20240102_000001_add_vip_fields.rs
src/: error.rs  main.rs
src/entities/: users.rs
src/hoops/: custom_middleware_example.rs  jwt.rs
src/models/: mod.rs
src/routers/: auth.rs  mod.rs  user.rs
views/: error_404.html  login.html  user_list_frag.html  user_list_page.html
