[package]
name = "ttbox_salvo"
version = "0.1.1"
edition = "2024"
rust-version = "1.89"
readme = "./README.md"

[dependencies]
anyhow = "1"
figment = { version = "0.10", features = ["env", "toml"] }
# 使用预编译的加密库，避免编译 ring
jsonwebtoken = {version = "10", default-features = false, features = ["use_pem"]}
rust-embed = "8"
salvo = {version = "0.84", features = ["anyhow", "cookie", "cors", "jwt-auth", "oapi", "serve-static", "rustls", "logging", "test"]}
serde = "1"
serde_json = "1"
thiserror = "2"
time = "0.3"
tokio = {version = "1", features = ["full"]}
tracing = "0.1"
validator = {version = "0.20", features = ["derive"]}
ulid = "1"
argon2 = "0.5"
cookie = "0.18"
dotenvy = "0.15"
tracing-appender ="0.2"
tracing-subscriber = {version = "0.3", features = ["std", "fmt", "env-filter", "tracing-log", "time", "local-time", "json"]}
sea-orm = { version = "1", features = ["runtime-tokio-native-tls", "sqlx-mysql"]}
rinja = "0.3"
rand = "0.9"
base64 = "0.22"
lazy_static = "1.4"
regex = "1.10"

# Linux 平台优化配置
[target.x86_64-unknown-linux-gnu]
# 使用静态链接，减少运行时依赖
rustflags = ["-C", "target-feature=+crt-static"]

# ARM64 Linux 平台
[target.aarch64-unknown-linux-gnu]
rustflags = ["-C", "target-feature=+crt-static"]